# hax

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PUBLISHING.md  README.md  aeneas-pin  charon-pin  flake.nix  install-aeneas.sh  justfile  pins.toml  rust-toolchain.toml  rustc-ice-2025-10-01T07_09_56-1890.txt  rustfmt.toml  setup.sh
cli/test-driver/: Cargo.toml  hax_frontend_export.json
cli/test-driver/.hax-tests/: fstar.haxmeta  lean.haxmeta
cli/test-driver/.hax-tests-cache/: fstar.haxmeta  lean.haxmeta
cli/test-driver/backend-runners/: FSTAR.MAKEFILE  fstar.sh
cli/test-driver/src/: backend_runners.rs  cli.rs  commands.rs  directives.rs  helpers.rs  log.rs  main.rs  promote_directives.rs  span_hint.rs  test_module.rs
examples/: .gitignore  Cargo.toml  Makefile  README.md
examples/adc/: Cargo.toml  Makefile
examples/adc/src/: lib.rs
examples/anodized/: Cargo.toml
examples/anodized/src/: lib.rs
examples/barrett/: Makefile
examples/barrett/src/: lib.rs
examples/bip-340/: Cargo.toml
examples/bip-340/src/: bip-340.rs
examples/bip-340/tests/: tests-bip-340.rs
examples/chacha20/: Makefile
examples/lean_adc/: Cargo.toml  Makefile
examples/lean_adc/src/: lib.rs
examples/lean_barrett/: Makefile
examples/lean_barrett/src/: lib.rs
examples/lean_chacha20/: Makefile
examples/lean_chacha20/src/: hacspec_helper.rs  lib.rs
examples/lean_tutorial/: Cargo.toml  Makefile
examples/lean_tutorial/src/: lib.rs
examples/legacy_lean_chacha20/: Cargo.toml
examples/legacy_lean_chacha20/src/: lib.rs
examples/legacy_lean_tutorial/: Cargo.toml  Makefile
examples/legacy_lean_tutorial/src/: lib.rs
examples/limited-order-book/: Makefile
examples/limited-order-book/src/: lib.rs
examples/loop_equivalence/: Cargo.toml  Makefile
examples/loop_equivalence/src/: lib.rs
examples/ntt/: Cargo.toml
examples/ntt/src/: lib.rs
examples/proverif-psk/: Cargo.toml  Makefile  Readme.md
examples/proverif-psk/src/: lib.rs
examples/sha256/src/: sha256.rs
examples/sha256/tests/: test_sha256.rs
examples/sha3/: .gitignore  Cargo.toml  Makefile
examples/sha3/proofs/: Aeneas.lean  Sha3.lean  lake-manifest.json  lakefile.toml
examples/sha3/src/: lib.rs  reference.rs
hax-lib/core-models/: .gitignore  COVERAGE.md  Cargo.toml  Makefile  README.md  hax.sh  patch_lean.py
hax-lib/core-models/alloc/: Cargo.toml
hax-lib/core-models/core-models/: Cargo.toml
hax-lib/core-models/lean/: README.md  lake-manifest.json  lakefile.toml
hax-lib/core-models/nix/: charon-portable-nocheck.nix
hax-lib/core-models/rand_core/: Cargo.toml
hax-lib/core-models/rust_primitives/: Cargo.toml
hax-lib/core-models/src/: lib.rs  testing.rs
hax-lib/core-models/std/: Cargo.toml
new-tests/: .gitignore  Cargo.toml  build.rs
new-tests/src/: lib.rs
new-tests/src/legacy/: attributes.rs  cyclic-modules.rs  dyn.rs  functions.rs  generics.rs  guards.rs  literals.rs  loops.rs  naming.rs  pattern-or.rs  side-effects.rs  traits.rs
rust-engine/codegen/: Cargo.toml  README.md
rust-engine/codegen/src/: generate_visitors.rs  helpers.rs  inline_mods.rs  main.rs  visitors.rs
rust-engine/json-types/: Cargo.toml
rust-engine/json-types/src/: main.rs
rust-engine/macros/: Cargo.toml
rust-engine/macros/src/: lib.rs  pretty.rs  ref_enum.rs  replace.rs  struct_fields.rs
rust-engine/macros/tests/: lib.rs
rust-printer/: .gitignore  Cargo.toml  build.rs
rust-printer/codegen/: Cargo.toml  README.md
rust-printer/codegen/src/: generate_enum.rs  main.rs
rust-printer/json-types/: Cargo.toml
rust-printer/json-types/src/: main.rs
rust-printer/macros/: Cargo.toml
rust-printer/macros/src/: lib.rs
rust-printer/src/: ast.rs  generic_printer.rs  generic_printer_draft.rs  import.rs  lib.rs  main.rs  printer.rs  symbol.rs
rust-printer/src/ast/: derives.rs  identifiers.rs  literals.rs  node.rs  span.rs
rust-printer/src/generic_printer/: doc_printer.rs  generated.rs  lean.rs  mod.rs  print_context.rs  print_view.rs  resugar.rs
tests/: .gitignore  Cargo.toml  build.rs
tests/.hax-tests/: fstar.haxmeta  lean.haxmeta
tests/attributes/src/: lib.rs
tests/cyclic-modules/: Cargo.toml
tests/lean-core-models/: Cargo.toml
tests/lean-core-models/src/: function.rs  lib.rs  phantom.rs  result.rs
tests/lean-tests/: Cargo.toml
tests/lean-tests/src/: array.rs  associated_types.rs  binops.rs  casts.rs  constants.rs  floats.rs  guards.rs  ite.rs  let_else.rs  lib.rs  loops.rs  matching.rs  monadic.rs  nested_control_flow.rs  opaque.rs  pattern_or.rs  question_mark.rs  recursion.rs  reject_do_dsl.rs  specs.rs  structs.rs  traits.rs  types.rs
tests/literals/: Cargo.toml  hax_frontend_export.json
tests/literals/src/: lib.rs
tests/proverif-basic-structs/: Cargo.toml  expected.pvl
tests/proverif-fn-to-letfun/: expected.pvl
tests/proverif-generics/: Cargo.toml  expected.pvl
tests/proverif-generics/src/: lib.rs
tests/proverif-inline/: Cargo.toml  expected.pvl
tests/proverif-inline/src/: lib.rs
tests/proverif-minimal/: Cargo.toml  expected.pvl
tests/proverif-noise/: Cargo.toml  expected.pvl
tests/proverif-ping-pong/: expected.pvl
tests/src/: generated.rs  lib.rs
tests/src/legacy/: attribute-opaque.rs  attributes.rs  generics.rs  loops.rs  mut-ref-functionalization.rs  naming.rs  traits.rs  unsafe.rs
tests/src/rustc-coverage/: abort.rs  assert-ne.rs  assert.rs  assert_not.rs  bad_counter_ids.rs  bench.rs  closure.rs  closure_bug.rs  closure_macro.rs  closure_unit_return.rs  color.rs  conditions.rs  continue.rs  coroutine.rs  coverage_attr_closure.rs  dead_code.rs  drop_trait.rs  generic-unused-impl.rs  generics.rs  holes.rs  if.rs  if_else.rs  if_not.rs  inline-dead.rs  inline.rs  inner_items.rs  issue-83601.rs  issue-84561.rs  issue-93054.rs  lazy_boolean.rs  let_else_loop.rs  loop-break.rs  loop_break_value.rs  loops_branches.rs  macro_in_closure.rs  match_or_pattern.rs  nested_loops.rs  no_cov_crate.rs  no_spans.rs  no_spans_if_not.rs  (+15 more)
tests/templates/: Makefile.fstar.template
tests/tuples/: Cargo.toml
(+3295 files in other folders)
