[workspace]
members = [
    "adc",
    "barrett",
    "chacha20",
    "legacy_lean_chacha20",
    "lean_tutorial",
    "limited-order-book",
    "loop_equivalence",
    "sha3",
    "sha256",
    "kyber_compress",
    "proverif-psk",
]
resolver = "2"

[workspace.dependencies]
hax-lib = { path = "../hax-lib" }
hax-bounded-integers = { path = "../hax-bounded-integers" }
