[package]
name = "rust-printer"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
hax-types = { path = "../hax-types", default-features = false }
hax-frontend-exporter = { path = "../frontend/exporter", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
schemars = "0.9"
macros = { path = "./macros" }

[build-dependencies]
syn = { version = "2", features = [
     "derive",
     "printing",
     "extra-traits",
     "parsing",
     "visit-mut",
     "visit",
     "full",
] }
quote = { version = "1" }
prettyplease = {version = "0.2"}
