[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dependencies]
hax-lib = { path = "../hax-lib" }
hax-bounded-integers = { path = "../hax-bounded-integers" }
serde = { version = "1.0", features = ["derive"] }
hax-lib-protocol = { path = "../hax-lib-protocol" }
hax-lib-protocol-macros = { path = "../hax-lib-protocol-macros" }
typenum = "1.18.0"

[workspace]

[build-dependencies]
anyhow = "1.0.100"
syn = { version = "2.0.106", features = ["full"] }
walkdir = "2.5.0"
