[package]
name = "hax-rust-engine-macros"
description = "This crate provides helpers procedural macros for the `hax-rust-engine`"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.8.0"
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["parsing", "visit-mut"] }
