[package]
name = "hax_engine_codegen"
description = "Internal crate which is used to generate the file sin the `generated` directories of `hax`."
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
itertools = "0.14.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2", features = [
    "full",
    "visit",
    "visit-mut",
    "derive",
    "printing",
    "extra-traits",
    "parsing",
    "full",
] }
