[package]
name = "hax_engine_codegen"
description = "Internal crate which is used to generate the file sin the `generated` directories of `hax`."
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
itertools.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { version = "2", features = [
    "full",
    "visit",
    "visit-mut",
    "derive",
    "printing",
    "extra-traits",
    "parsing",
    "full",
] }
