[package]
name = "std"
version = "0.1.0"
edition = "2024"

[dependencies]
hax-lib.workspace = true
core-models = { path = "../core-models" }

[lib]
doctest = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)', 'cfg(hax_compilation)', 'cfg(hax_backend_fstar)', 'cfg(hax_backend_lean)'] }
